@@ -10,23 +10,21 @@
 <title>LilyPond, music notation for everyone</title>
 
 <table width="100%">
-<tr>
-<td width="50%" >
-<p class="top"  align="LEFT" >
-   <!-- top left message can go here !-->
-
-</td>
-<td width="50%">
-  <p class="top" align="right">
-  <tt>http://lilypond.org</tt>
-  <a href="http://sca.uwaterloo.ca/lilypond/lilypond.org/web/">
-    <tt>.ca</tt>
-    mirror
-  </a>
-  </p>
-</td>
-
-</tr>
+  <tr>
+    <td width="50%">
+      <p class="top" align="left">
+	<!-- top left message can go here !-->
+      </p>
+    </td>
+    <td width="50%">
+      <p class="top" align="right">
+	<tt>http://lilypond.org</tt>
+	<a href="http://sca.uwaterloo.ca/lilypond/lilypond.org/web/">
+	  <tt>.ca</tt>mirror
+	</a>
+      </p>
+    </td>
+  </tr>
 </table>
 
 <br>
@@ -167,10 +165,10 @@
 		   + f_lily_google.brute_query.value"
       onKeyUp="f_lily_google.q.value='site:www.lilypond.org '
 	       + f_lily_google.brute_query.value">
-    <input name="btnG" type="hidden" value="Google Search">
-    <input type="text" name="brute_query" size="40">
-    <input type="hidden" name="q" value=" ">
-    <input type="submit" value="Search lilypond.org">
+  <input name="btnG" type="hidden" value="Google Search">
+  <input type="text" name="brute_query" size="40">
+  <input type="hidden" name="q" value=" ">
+  <input type="submit" value="Search lilypond.org">
 </form>
 
 <p align="right">
